// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`fabien renders properly 1`] = `
<div>
  <leftsidenavigation-stub homepage="/fabien"></leftsidenavigation-stub>
  <main class="relative h-screen">
    <h1>this.$i18n.t('page.title')</h1>
    <p>this.$i18n.t('page.description')</p>
    <nuxt-link-stub to="switchLocalePath('en')">
      English
    </nuxt-link-stub>
    <nuxt-link-stub to="switchLocalePath('fr')">
      Français
    </nuxt-link-stub>
    <div class="helper absolute text-center text-3xl font-bold bg-gray-900 bg-opacity-25 px-12 py-10">
      RESIZE THE WINDOW
      <p class="block text-black text-opacity-25 text-xs">
        Breakpoints on 640px and 768px
      </p>
    </div>
  </main>
</div>
`;

exports[`fabien renders properly en lang 1`] = `
<div>
  <leftsidenavigation-stub homepage="/fabien"></leftsidenavigation-stub>
  <main class="relative h-screen">
    <h1>this.$i18n.t('page.title')</h1>
    <p>this.$i18n.t('page.description')</p>
    <!---->
    <nuxt-link-stub to="switchLocalePath('fr')">
      Français
    </nuxt-link-stub>
    <div class="helper absolute text-center text-3xl font-bold bg-gray-900 bg-opacity-25 px-12 py-10">
      RESIZE THE WINDOW
      <p class="block text-black text-opacity-25 text-xs">
        Breakpoints on 640px and 768px
      </p>
    </div>
  </main>
</div>
`;

exports[`fabien renders properly fr lang 1`] = `
<div>
  <leftsidenavigation-stub homepage="/fabien"></leftsidenavigation-stub>
  <main class="relative h-screen">
    <h1>this.$i18n.t('page.title')</h1>
    <p>this.$i18n.t('page.description')</p>
    <nuxt-link-stub to="switchLocalePath('en')">
      English
    </nuxt-link-stub>
    <!---->
    <div class="helper absolute text-center text-3xl font-bold bg-gray-900 bg-opacity-25 px-12 py-10">
      RESIZE THE WINDOW
      <p class="block text-black text-opacity-25 text-xs">
        Breakpoints on 640px and 768px
      </p>
    </div>
  </main>
</div>
`;
